Update pizza game player implementation

--- a/pizza_game_player.html
+++ b/pizza_game_player.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Pizza Menu Game Prototype</title>
+  <title>Pizza Game Prototype</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 30px; background: #f8f8f8; }
     h1, h2 { color: #b33c00; }
@@ -1011,7 +1011,7 @@
       </div>
     </div>
   </div>
-  <h1>Pizza Menu Game Prototype</h1>
+  <h1>Pizza Game Prototype</h1>
   
   <!-- Hidden elements for data management -->
   <div style="display: none;">
